Closed Bug 591046 Opened 15 years ago Closed 15 years ago

Unparenthesized macro breaks static checking builds

Categories

(Core :: Networking: HTTP, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: ehren.m, Assigned: ehren.m)

References

Details

Attachments

(1 file)

http://hg.mozilla.org/mozilla-central/rev/72d2863f43c7 has two instances of if NS_FAILED(rv) // no parentheses In static checking builds NS_FAILED is an inline function: http://mxr.mozilla.org/mozilla-central/source/xpcom/base/nsError.h#116
Attached patch patchSplinter Review
Attachment #469608 - Flags: review?(dwitte)
Comment on attachment 469608 [details] [diff] [review] patch r=dwitte
Attachment #469608 - Flags: review?(dwitte) → review+
Keywords: checkin-needed
Assignee: nobody → ehren.m
Status: NEW → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: