Bug 591046 - Unparenthesized macro breaks static checking builds. r=dwitte, a=bustage